Added proxy endpoint to omdb api
