# src/main/kotlin/com/bluthbusters/api/controllers/MoviesController.kt
@@ -13,4 +13,5 @@ interface MoviesController {
   fun listMovies(status: String?, limit: Long?, page: Long?, context: OperationRequest, resultHandler: Handler<AsyncResult<OperationResponse>>)
   fun findMovie(id: String, context: OperationRequest, resultHandler: Handler<AsyncResult<OperationResponse>>)
   fun updateMovie(id: String, body: JsonObject, context: OperationRequest, resultHandler: Handler<AsyncResult<OperationResponse>>)
+  fun searchMovieExternalData(body: JsonObject, context: OperationRequest, resultHandler: Handler<AsyncResult<OperationResponse>>)
 }
